--- a/Config/zuul-dev.yml
+++ b/Config/zuul-dev.yml
@@ -38,4 +38,9 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 500
-            
+ 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream           
