--- a/Config/user-service-dev.yml
+++ b/Config/user-service-dev.yml
@@ -14,10 +14,16 @@ spring:
     username: admin
     password: admin
 server:
-  port: 8103
+  port: 8101
   
   
 eureka:
   client:
    service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka  
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
